remove some text

--- a/final-project/final-notebook.ipynb
+++ b/final-project/final-notebook.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "## Dataset\n",
     "\n",
-    "Our data comes from [The BSD500](https://www2.eecs.berkeley.edu/Research/Projects/CS/vision/bsds/), which contains both images and hand-labeled segmentations.\n",
+    "Our data comes from [the BSD500](https://www2.eecs.berkeley.edu/Research/Projects/CS/vision/bsds/), which contains both images and hand-labeled segmentations.\n",
     "\n",
     "First, let's look at the example image."
    ]
@@ -121,7 +121,7 @@
    "source": [
     "## Model\n",
     "\n",
-    "A Gaussian Mixture Model (GMM) is as follows.\n",
+    "We will use a Gaussian Mixture Model (GMM) to perform image segmentation, which is described as follows:\n",
     "\n",
     "The mixing probabilities of cluster components:\n",
     "\n",
@@ -137,9 +137,9 @@
     "\n",
     "$$p(x_n | \\pi, \\mu, \\sigma) = \\sum_{i=1}^K \\pi_k \\text{Normal}(x_n | \\mu_k, \\sigma^2_k)$$\n",
     "\n",
-    "In the image segmentation task, we treat each pixel, a 3-D vector containing its RGB color value, as $x_n$, where the value are integers ranging from 0 to 255.\n",
+    "In the image segmentation task, we treat each pixel as $x_n$, where a pixel is a 3-D vector of RGB color value ranging from 0 to 255.\n",
     "\n",
-    "To fully specify the model, we need to choose the cluster number and the prior parameter."
+    "To fully specify the model, we need to choose the cluster number and the prior parameter. In the following experiments, we set $\\alpha=1$ and $a=1, b=1$, and __we will mainly focus on tuning the prior setting for the cluster center $\\mu_k$__."
    ]
   },
   {
@@ -197,9 +197,7 @@
    "source": [
     "### 2. Setting the prior\n",
     "\n",
-    "Initializing mixture models is always a challenge. In terms of the dirichlet prior for mixing probability $\\pi$, $\\alpha$ encodes the prior belief in the level of concentration of pixels among clusters. For the prior of cluster center $\\mu_k$, we hope that it could spread over the RGB value space -- [0,255].\n",
-    "\n",
-    "In the following experiments, we set $\\alpha=1$ and $a=1, b=1$, and __we will mainly focus on tuning the prior setting for the cluster center $\\mu_k$__.\n",
+    "Initializing mixture models is always a challenge. For the prior of cluster center $\\mu_k$, we hope that it could spread over the RGB value space -- [0,255]. \n",
     "\n",
     "First, we try a shared prior for all cluster centers, that is $\\mu_k \\sim \\text{Normal}(127, 80^2)$."
    ]
@@ -487,8 +485,6 @@
    "source": [
     "ADVI's segmentation result is bad with only four clusters are assigned. Moreover, the RGB values of all identified cluster centers are almost identical.\n",
     "\n",
-    "Considering the randomness, we have run several experiments of ADVI with different seed. The results show that the number of identified clusters ranges from 1 to 4 (mostly 1), and the segmented images are all grey.\n",
-    "\n",
     "#### Why ADVI fails?\n",
     "\n",
     "Is this bad result due to ADVI, or the model prior setting? We diagnose this by plotting the posterior distribution."
@@ -523,7 +519,7 @@
    "source": [
     "As shown above, the posterior distributions of the cluster centers, $\\mu_k$, collapse to one distribution which is centered around the prior mean - 127.\n",
     "\n",
-    "One possible reason is that ADVI is sensitive to the shared prior setting, hence the optimization process is stuck at a local optimum, leading to the \" collapse\". \n",
+    "One possible reason is that ADVI is sensitive to the shared prior setting, hence the optimization process is stuck at a local optimum, leading to the \"distribution collapse\". \n",
     "\n",
     "#### Solution\n",
     "To fix this issue for ADVI, we try a different prior setting of $\\mu_k$: \n",
@@ -768,7 +764,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we could see from above, MCMC's segmentation result does not vary much by switching shared prior to different prior. Moreover, MCMC achieves a rather good segmentation image using the shared prior. In this aspect, MCMC is robust to the prior setting."
+    "As we could see from above, MCMC's segmentation result does not vary much by switching shared prior to different prior. That is, MCMC is robust to the prior setting."
    ]
   },
   {
@@ -838,9 +834,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, the segmented image seems much better than the previous all-grey one, with 5 clusters identified. Hence the different-prior setting does help.\n",
-    "\n",
-    "However, the number of clusters identified by ADVI is less than that of MCMC. Moreover, in terms of the color display, which indicates the RGB value of posterior cluster center, MCMC's result is closer to the truth."
+    "For ADVI, the segmented image seems much better than the previous one, with 5 clusters identified. Hence the different-prior setting does help."
    ]
   },
   {
@@ -870,17 +864,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Plotting the posterior distribution, we could see that each $\\mu_k$ subjects to different distribution. It also reflects a different prior setting for $\\mu_k$ helps prevent \"mode collapse\"."
+    "Checking the posterior, we could see that each $\\mu_k$ subjects to different distribution. It also reflects a different prior setting for $\\mu_k$ helps.\n",
+    "\n",
+    "\n",
+    "However, the number of clusters identified by ADVI is less than that of MCMC. Moreover, the color of MCMC's result is closer to the truth which indicates a more accurate posterior distribution for $\\mu_k$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### How to get a better ADVI segmentation result?\n",
+    "#### How to get a better ADVI segmentation?\n",
     "\n",
-    "- Increase the number of clusters $K$ to get more posterior idenfitied clusters.\n",
-    "- Fine tune the prior to get more accurate posterior cluster center $\\mu_k$."
+    "- Increase the number of clusters $K$ to idenfity more clusters.\n",
+    "- Fine tune the prior to get more accurate posterior distribution."
    ]
   },
   {
@@ -889,9 +886,9 @@
    "source": [
     "### 2. Clustering metric: comparing to the groud truth\n",
     "\n",
-    "In this section, we will compare the MCMC/ADVI-segmented results with human-segmented results, which is referred as the \"ground truth\". We will call them inference segmentation and ground-truth/human segmentation in the following context.\n",
+    "In this section, we will compare the inference (MCMC/ADVI) segmentation with the hand-labeled segmentation -- referred as \"ground truth\".\n",
     "\n",
-    "First, let's look at the ground truth provided by the dataset."
+    "First, let's look at the ground truth."
    ]
   },
   {
@@ -925,7 +922,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we will use several common metrics to compare the agreement of two different cluster assginments, where one is the human segmentataion, and another is inference result (MCMC/ADVI)."
+    "Now, we use some common metrics to compare the agreement of inference segmentation to the ground-truth. Note that in this part we don't compare the color approximation."
    ]
   },
   {
@@ -964,30 +961,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| Metric \\ Inference | MCMC | ADVI |\n",
-    "| --- | :---: | --- |\n",
-    "| Homogeneity |  ✔️ | ✘ |\n",
-    "| Completeness |  ✘| ✔️ |\n",
-    "| V-measure | ✘ | ✔️ |\n",
-    "| Adj. Rand Index | ✘ | ✔️ |\n",
-    "| Adj. Mutual Info. |✘  | ✔️ |"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Interpreting and comparing metric results\n",
+    "__MCMC only outperforms ADVI in the Homogeneity score.__\n",
     "\n",
-    "- **Homogeneity:** Ideally each of the inference segments should only contain pixels that belong to one ground-truth segment. \n",
-    "- **Completeness:** Ideally each of the inference segment should contain all pixels that belong to one ground-truth segment.\n",
-    "- **V-measure:** a measure that combines above homogenity and completeness (the harmonic mean actually).\n",
-    "- **Adjusted Rand. Index:** Ideally any pair of pixels that are in the ground-truth segment should also be in the same inference segment (True Positive); and any pair of pixles not in the same ground-truth segment should not be in the same inference segment (True Negative). \n",
-    "- **Adjusted Mutual Information:** If two segmentations contain no information about one another, then AMI=0; if they constain perfect information about one another, then AMI=1.\n",
+    "#### Why?\n",
     "\n",
-    "First, we should point out that these metrics only indicate the agreements between the inference segmentation and the human segmentation, while ignoring the agreement in color display.\n",
-    "\n",
-    "As we could see from the comparison table, MCMC only outperforms ADVI in Homogeneity. This is because that MCMC gives a much finer result than the human segmentation. For example, in human segmented image, the whole sky is one segment, while MCMC differentiates different segments from the sky according to the changes in color, while ignoring the semantic meaning.\n",
+    "This is because that MCMC gives a much finer result than the human segmentation. That is, MCMC __\"over-segments\"__ the image while ignoring the semantic meaning.\n",
     "\n",
     "#### How to imrove MCMC in terms of clustering metrics?\n",
     "\n",
@@ -1008,7 +986,7 @@
     "\n",
     "> A PDI is a ratio of variance to expectation. Intuitively, the variance of the likelihood under the posterior highlights potential model mismatch; dividing them by the mean calibrates this spread to its predictive accuracy.\n",
     "\n",
-    "In the experiments, we find that the distribution of PDI can be quite spiky, hence for smoothing effect we do the log transformation, i.e., compute:\n",
+    "In the experiments, we find that the distribution of PDI is quite spiky, hence for smoothing effect we do the log transformation:\n",
     "\n",
     "$$\\text{log-PDI}(n) = \\log (\\text{PDI} (n))$$.\n",
     "\n",
