remove some text

--- a/final-project/final-notebook.ipynb
+++ b/final-project/final-notebook.ipynb
@@ -252,7 +252,7 @@
    "source": [
     "## Inference\n",
     "\n",
-    "In this part, we make inference via MCMC (Gibbs sampling) and ADVI."
+    "Now, we make inference via MCMC (Gibbs sampling) and ADVI."
    ]
   },
   {
@@ -984,9 +984,9 @@
     "where \n",
     "$$\\mu (n) = \\mathbb{E}_{\\theta | x} [p(x_n | \\theta) ], \\qquad \\mu_{\\log} (n) = \\mathbb{E}_{\\theta | x} [\\log p(x_n | \\theta)], \\qquad \\sigma^2 (n) = \\mathbb{V}_{\\theta | x} [p(x_n | \\theta)], \\qquad \\sigma^2_{\\theta | x} [\\log p(x_n | \\theta)] . $$\n",
     "\n",
-    "> A PDI is a ratio of variance to expectation. Intuitively, the variance of the likelihood under the posterior highlights potential model mismatch; dividing them by the mean calibrates this spread to its predictive accuracy.\n",
+    "> A PDI is a ratio of variance to expectation. Intuitively, the variance highlights potential model mismatch; dividing them by the mean calibrates this spread to its predictive accuracy.\n",
     "\n",
-    "In the experiments, we find that the distribution of PDI is quite spiky, hence for smoothing effect we do the log transformation:\n",
+    "In the experiments, we find that the distribution of PDI is spiky, hence for smoothing effect we do the log transformation:\n",
     "\n",
     "$$\\text{log-PDI}(n) = \\log (\\text{PDI} (n))$$.\n",
     "\n",
@@ -1105,7 +1105,8 @@
    "source": [
     "From the plots above, we can find that, \n",
     "- for the same type of index, the density distributions inferred by MCMC and ADVI are similar.\n",
-    "- The distributions of the last three index are all left-skewed.\n",
+    "- The distributions of the last three indice are all left-skewed.\n",
+    "-  __If we believe that most of data points are matched well, and only a few are outliers, then a left-skewed distribution indicates that data points with index value close to 0, match the model well; and smaller index value indicates outliers.\n",
     "\n",
     "Note: the scale of index value differs much from MCMC to ADVI. This is due to that the implementation of log-likelihood is up to a constant to the true one."
    ]
@@ -1116,7 +1117,7 @@
    "source": [
     "#### b. Heatmap\n",
     "\n",
-    "In this part, we plot a heatmap to visualize the index values, where the \"heat value\" of each pixel is set to its index value. In the 2-D case, we find that low index values indicate outliers. Hence, in the segmentation task, we expect low \"heat\" pixels (that of darker color) appear in the margin between different segments."
+    "We use the heatmap to visualize the index values. We expect the low-heat, darker-colored pixels appear in the margin between different segments."
    ]
   },
   {
@@ -1169,7 +1170,7 @@
    "source": [
     "Observations:\n",
     "\n",
-    "- In both the MCMC and ADVI inferred results, the heatmaps \"reveal\" the segmented result. That is, pixels belong to the same segment have index values in the same level.\n",
+    "- In both the MCMC and ADVI inferred results, the heatmaps \"reveal\" the segmentation. That is, pixels belong to the same segment have index values in the same level.\n",
     "- __Darker-colored pixels tend to appear near the margins between segments.__"
    ]
   },
@@ -1177,16 +1178,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2). Intrepretation of indice -- more examples\n",
+    "### 2). Interpretation by more examples\n",
     "\n",
-    "We need to run experiments on more image to validate interpretate those indice.\n",
+    "We need to run experiments on more image to validate our intuition.\n",
     "\n",
-    "Setting: for computation consideration, we use ADVI as inference method. For all experiments on different images, we the same prior setting as in the reset model, and set $K=20$. So the model is not fine-tuned according to the specific image. All the output images could be found in \"../out\" folder.\n",
+    "Setting: for computation consideration, we use ADVI. For all experiments, we use the reset model with $K=20$.\n",
     "\n",
     "#### a. Density distribution\n",
-    "- PDI density distribution is very spiky, hence we turn to log-PDI. \n",
-    "- For the index that are negative-valued (log-PDI, PDI-log and WAPDI), the density distributions are mostly left-skewed.\n",
-    "- __If we believe that most of datapoints are matched well, and only a few are outliers, then a left-skewed distribution reveals that datapoints with index value close to 0, match the model well.__\n",
+    "- PDI density distributions are all spiky, hence we turn to log-PDI. \n",
+    "- For the negative-valued index (log-PDI, PDI-log and WAPDI), the density distributions are mostly left-skewed.\n",
     "\n",
     "#### b. Heatmap"
    ]
@@ -1246,8 +1246,7 @@
    "source": [
     "The observations are consistent with the example above:\n",
     "- The heatmaps \"reveal\" the segmentation, expecially pdi-log and wapdi, while the distributions of pdi and log-pdi are very spiky thereby leading to a black-and-white heatmap.\n",
-    "- In the heatmaps of pdi-log and wapdi, darker-colored pixels tend to outline the margin of segments, or appear in the regions divided into many small segments.\n",
-    "- In terms of outlining the margin, wapdi does a better job than pdi-log -- most of pixels have wapdi value close to 0."
+    "- In the heatmaps of pdi-log and wapdi, darker-colored pixels tend to outline the margin of segments, or appear in the regions divided into many small segments."
    ]
   },
   {
@@ -1269,7 +1268,7 @@
     "    - ADVI is much less than MCMC.\n",
     "\n",
     "- PDI\n",
-    "    - Indicates \"outliers\""
+    "    - Indicates \"outliers\" -- pixels in the margin of segments."
    ]
   },
   {
