--- a/final-project/final-notebook.ipynb
+++ b/final-project/final-notebook.ipynb
@@ -139,7 +139,7 @@
     "\n",
     "In the image segmentation task, we treat each pixel as $x_n$, where a pixel is a 3-D vector of RGB color value ranging from 0 to 255.\n",
     "\n",
-    "To fully specify the model, we need to choose the cluster number and the prior parameter. In the following experiments, we set $\\alpha=1$ and $a=1, b=1$, and __we will mainly focus on tuning the prior setting for the cluster center $\\mu_k$__."
+    "To fully specify the model, we need to choose the cluster number and the prior parameter. In the following experiments, we set $\\alpha=a=b=1$, and __we will mainly focus on tuning the prior of the cluster center $\\mu_k$__."
    ]
   },
   {
@@ -177,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the histogram is plot independently for the 3 RGB channels, while what we want is to cluster pixels based on a combination of 3 channels. Hence it only roughly gives us a sense of how many clusters there should be.\n",
+    "Note that the histograms of 3 RGB channels are indendent, while what we want is to cluster pixels based on a combination of 3 channels. Hence it only roughly gives us a sense of how many clusters there should be.\n",
     "\n",
     "It seems like there are 9 clusters in the color histogram. So we make:"
    ]
@@ -199,7 +199,7 @@
     "\n",
     "Initializing mixture models is always a challenge. For the prior of cluster center $\\mu_k$, we hope that it could spread over the RGB value space -- [0,255]. \n",
     "\n",
-    "First, we try a shared prior for all cluster centers, that is $\\mu_k \\sim \\text{Normal}(127, 80^2)$."
+    "First, we try a shared prior for all cluster centers, that is for all $k$, $$\\mu_k \\sim \\text{Normal}(127, 80^2)$$."
    ]
   },
   {
@@ -324,7 +324,7 @@
     "x_post = Normal(loc=tf.ones([N, 1, 1, 1]) * mu_sample, scale=tf.ones([N, 1, 1, 1]) * tf.sqrt(sigmasq_sample))\n",
     "x_broadcasted = tf.cast(tf.tile(tf.reshape(X, [N, 1, 1, D]), [1, M, K, 1]), dtype=tf.float32)\n",
     "log_liks = tf.reduce_mean(tf.reduce_sum(x_post.log_prob(x_broadcasted), 3), 1)\n",
-    "clusters = tf.argmax(log_liks, 1).eval() # cluster assignment\n",
+    "clusters = tf.argmax(log_liks, 1).eval()\n",
     "posterior_mu = qmu.params.eval().mean(axis=0)"
    ]
   },
@@ -391,10 +391,7 @@
     "\n",
     "### 1. Segmentation results\n",
     "\n",
-    "Showing the segmented image is the most straightforward way to evaluate and compare different inference results.\n",
-    "\n",
-    "We obtain the segmented image as follows:\n",
-    "\n",
+    "The segmented image is the most straightforward approach to evaluate the inference results, which is obtained as follows:\n",
     "- assign each pixel to the most probable cluster\n",
     "- set the RGB value of the pixel to the RGB value of its assigned cluster center."
    ]
@@ -517,18 +514,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As shown above, the posterior distributions of the cluster centers, $\\mu_k$, collapse to one distribution which is centered around the prior mean - 127.\n",
+    "As shown above, the posterior distributions of the cluster centers, $\\mu_k$, collapse to one distribution which is centered around the prior mean -- 127.\n",
     "\n",
     "One possible reason is that ADVI is sensitive to the shared prior setting, hence the optimization process is stuck at a local optimum, leading to the \"distribution collapse\". \n",
     "\n",
     "#### Solution\n",
     "To fix this issue for ADVI, we try a different prior setting of $\\mu_k$: \n",
     "\n",
-    "$$\\text{For }k\\in 1: K, \\quad \\mu_k \\sim \\text{Normal}(\\alpha_k, \\beta_k),$$\n",
+    "$$\\mu_k \\sim \\text{Normal}(\\alpha_k, \\beta_k),$$\n",
     "\n",
-    "where $\\alpha_{k,i}$ is randomly picked from 20-230 for $i=0,1,2$, and $\\beta_k$ is set to $20$ for all $k$. \n",
+    "where $\\alpha_{k}$ is randomly picked from 20-230, and $\\beta_k$ is set to $20$ for all $k$. \n",
     "\n",
-    "The intuition is that we hope the prior cluster centers could spread over the RGB space, while avoiding overlapping with each other."
+    "The intuition is that we hope that all $\\mu_k$s could spread over the RGB space and avoid overlapping with each other."
    ]
   },
   {
@@ -586,13 +583,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inference"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Inference\n",
     "### MCMC"
    ]
   },
@@ -715,7 +706,6 @@
     "x_2_post = Normal(loc=tf.ones([N, 1, 1, 1]) * mu_2_sample, scale=tf.ones([N, 1, 1, 1]) * tf.sqrt(sigmasq_2_sample))\n",
     "x_2_broadcasted = tf.cast(tf.tile(tf.reshape(X, [N, 1, 1, D]), [1, M, K, 1]), dtype=tf.float32)\n",
     "log_liks_2 = tf.reduce_mean(tf.reduce_sum(x_2_post.log_prob(x_2_broadcasted), 3), 1)\n",
-    "# cluster assignment\n",
     "clusters_2 = tf.argmax(log_liks_2, 1).eval()\n",
     "posterior_mu_2 = qmu_2.params.eval().mean(axis=0)"
    ]
@@ -876,19 +866,19 @@
    "source": [
     "#### How to get a better ADVI segmentation?\n",
     "\n",
-    "- Increase the number of clusters $K$ to idenfity more clusters.\n",
-    "- Fine tune the prior to get more accurate posterior distribution."
+    "- Increase the number of clusters $K$.\n",
+    "- Fine tune the prior."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Clustering metric: comparing to the groud truth\n",
+    "### 2. Clustering metric\n",
     "\n",
-    "In this section, we will compare the inference (MCMC/ADVI) segmentation with the hand-labeled segmentation -- referred as \"ground truth\".\n",
+    "In this section, we will compare the inference (MCMC/ADVI) segmentation with the hand-labeled segmentation -- referred as the \"ground-truth\".\n",
     "\n",
-    "First, let's look at the ground truth."
+    "First, let's look at the ground-truth."
    ]
   },
   {
@@ -922,7 +912,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, we use some common metrics to compare the agreement of inference segmentation to the ground-truth. Note that in this part we don't compare the color approximation."
+    "We use some common metrics to compare the agreement of inference segmentation to the ground-truth."
    ]
   },
   {
@@ -978,17 +968,18 @@
    "source": [
     "### 3. PDI\n",
     "\n",
+    "Let\n",
+    "$$\\mu (n) = \\mathbb{E}_{\\theta | x} [p(x_n | \\theta) ], \\qquad \\mu_{\\log} (n) = \\mathbb{E}_{\\theta | x} [\\log p(x_n | \\theta)], \\qquad \\sigma^2 (n) = \\mathbb{V}_{\\theta | x} [p(x_n | \\theta)], \\qquad \\sigma^2_{\\theta | x} [\\log p(x_n | \\theta)] . $$\n",
+    "\n",
+    "A PDI is a ratio of variance to expectation. Intuitively, the variance highlights potential model mismatch; dividing them by the mean calibrates this spread to its predictive accuracy.\n",
+    "\n",
+    "In thie notebook we consider following indices:\n",
     "$$\\text{PDI}(n) = \\frac{\\sigma^2 (n)}{\\mu (n)}  \\qquad \\text{PDI-log}(n) = \\frac{\\sigma^2_{\\log} (n)}{\\mu_{\\log} (n)} \\qquad \n",
     "\\text{WAPDI}(n) = \\frac{\\sigma^2_{\\log}(n)}{\\log \\mu (n)}$$\n",
     "\n",
-    "where \n",
-    "$$\\mu (n) = \\mathbb{E}_{\\theta | x} [p(x_n | \\theta) ], \\qquad \\mu_{\\log} (n) = \\mathbb{E}_{\\theta | x} [\\log p(x_n | \\theta)], \\qquad \\sigma^2 (n) = \\mathbb{V}_{\\theta | x} [p(x_n | \\theta)], \\qquad \\sigma^2_{\\theta | x} [\\log p(x_n | \\theta)] . $$\n",
-    "\n",
-    "> A PDI is a ratio of variance to expectation. Intuitively, the variance highlights potential model mismatch; dividing them by the mean calibrates this spread to its predictive accuracy.\n",
-    "\n",
-    "In the experiments, we find that the distribution of PDI is spiky, hence for smoothing effect we do the log transformation:\n",
-    "\n",
-    "$$\\text{log-PDI}(n) = \\log (\\text{PDI} (n))$$.\n",
+    "and we also compute: \n",
+    "$$\\text{log-PDI}(n) = \\log (\\text{PDI} (n))$$\n",
+    "since we find the distributino of PDI($n$) is quite spiky.\n",
     "\n",
     "Reference: [PDI2016](https://arxiv.org/pdf/1605.07604.pdf)"
    ]
@@ -1009,7 +1000,7 @@
    ],
    "source": [
     "%%time\n",
-    "# Compute MCMC results\n",
+    "# MCMC\n",
     "log_liks_3 = tf.reduce_sum(x_2_post.log_prob(x_2_broadcasted), 3)\n",
     "pi_samples_tiled_3 = tf.tile(tf.expand_dims(tf.log(pi_2_sample), 0), [N, 1, 1])\n",
     "sum_log_pi_normal_3 = tf.add(pi_samples_tiled_3, log_liks_3)\n",
@@ -1039,7 +1030,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Compute ADVI restuls\n",
+    "# ADVI\n",
     "pdi_advi, pdi_log_advi, wapdi_advi = PDI(post_samples, model)\n",
     "log_pdi_advi = np.log(pdi_advi)"
    ]
@@ -1104,11 +1095,11 @@
    "metadata": {},
    "source": [
     "From the plots above, we can find that, \n",
-    "- for the same type of index, the density distributions inferred by MCMC and ADVI are similar.\n",
-    "- The distributions of the last three indice are all left-skewed.\n",
-    "-  __If we believe that most of data points are matched well, and only a few are outliers, then a left-skewed distribution indicates that data points with index value close to 0, match the model well; and smaller index value indicates outliers.\n",
+    "- For the same index, the density distributions inferred by MCMC and ADVI are similar, since they are all approximations to the distribution inferred by the true posteior.\n",
+    "- The distributions of the last three indices are all left-skewed.\n",
+    "-  __If we believe that most of data points are matched well, and only a few are outliers, then a left-skewed distribution indicates that data points with high index value, match the model well, while small index value indicates outliers.__\n",
     "\n",
-    "Note: the scale of index value differs much from MCMC to ADVI. This is due to that the implementation of log-likelihood is up to a constant to the true one."
+    "Note: the scale of index value differs from MCMC to ADVI. This is because the implementation of log-likelihood is up to a constant to the true one."
    ]
   },
   {
@@ -1117,7 +1108,7 @@
    "source": [
     "#### b. Heatmap\n",
     "\n",
-    "We use the heatmap to visualize the index values. We expect the low-heat, darker-colored pixels appear in the margin between different segments."
+    "We use the heatmap to visualize the index values. We expect low-heat, darker-colored pixels appear in the margin between different segments."
    ]
   },
   {
@@ -1170,7 +1161,7 @@
    "source": [
     "Observations:\n",
     "\n",
-    "- In both the MCMC and ADVI inferred results, the heatmaps \"reveal\" the segmentation. That is, pixels belong to the same segment have index values in the same level.\n",
+    "- In both the MCMC and ADVI inferred results, the heatmaps \"reveal\" the segmentation.\n",
     "- __Darker-colored pixels tend to appear near the margins between segments.__"
    ]
   },
@@ -1178,7 +1169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2). Interpretation by more examples\n",
+    "### 2). More examples\n",
     "\n",
     "We need to run experiments on more image to validate our intuition.\n",
     "\n",
@@ -1257,18 +1248,18 @@
     "\n",
     "- Prior setting\n",
     "    - MCMC is robust to prior setting, while ADVI is sensitive.\n",
-    "    - A different-prior setting boosts ADVI's segmentation performance.\n",
+    "    - A different-prior setting helps ADVI's segmentation performance.\n",
     "\n",
     "- Segmentation results\n",
     "    - Using the same cluster number $K=9$, MCMC identify all 9 clusters while ADVI collapses to 5.\n",
-    "    - In terms of infering value of posterior cluster centers, MCMC is better than ADVI.\n",
+    "    - In infering posterior cluster centers $\\mu_k$, MCMC is better than ADVI.\n",
     "    - However, due to the large $K$ setting, MCMC over-segments the image compared to the ground-truth.\n",
     "\n",
     "- Computation time\n",
-    "    - ADVI is much less than MCMC.\n",
+    "    - ADVI runs much faster than MCMC.\n",
     "\n",
     "- PDI\n",
-    "    - Indicates \"outliers\" -- pixels in the margin of segments."
+    "    - Identifies \"outliers\" -- pixels in the margin between segments."
    ]
   },
   {
