--- a/final-project/final-notebook.ipynb
+++ b/final-project/final-notebook.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "Image segmentation is a widely-used technique in computer vision. It enables us to extract useful information from an image by dividing it into several regions. In this notebook, we focus on color-based clustering to perform segmentation. We go through [[Box's Loop](https://www.jstor.org/stable/2286841?seq=1#metadata_info_tab_contents)] by first building Gaussian mixture model, then making inference with MCMC and ADVI [[advi2016](https://arxiv.org/pdf/1603.00788.pdf)] and finally evaluating our segmentation result through Bayesian criticism and task-specific criteria.  \n",
+    "Image segmentation is a widely-used technique in computer vision. It enables us to extract useful information from an image by dividing it into several regions. In this notebook, we focus on color-based clustering to perform segmentation. We go through [[Box's Loop](https://www.jstor.org/stable/2286841?seq=1#metadata_info_tab_contents)] by first building Gaussian mixture model (GMM), then making inference with MCMC and ADVI [[advi2016](https://arxiv.org/pdf/1603.00788.pdf)] and finally evaluating our segmentation result through Bayesian criticism and task-specific criteria.  \n",
     "\n",
     "## Dataset\n",
     "\n",
@@ -121,9 +121,7 @@
    "source": [
     "## Model\n",
     "\n",
-    "We will use a Gaussian Mixture Model (GMM) to perform image segmentation, which is described as follows:\n",
-    "\n",
-    "The mixing probabilities of cluster components:\n",
+    "We use a GMM to perform image segmentation:\n",
     "\n",
     "$$p(\\pi) = \\text{Dirichlet} (\\pi | \\alpha \\mathbf{1}_k)$$\n",
     "\n",
@@ -137,7 +135,7 @@
     "\n",
     "$$p(x_n | \\pi, \\mu, \\sigma) = \\sum_{i=1}^K \\pi_k \\text{Normal}(x_n | \\mu_k, \\sigma^2_k)$$\n",
     "\n",
-    "In the image segmentation task, we treat each pixel as $x_n$, where a pixel is a 3-D vector of RGB color value ranging from 0 to 255.\n",
+    "In this task, we treat each pixel as $x_n$, where a pixel is a 3-D vector of RGB color value ranging from 0 to 255.\n",
     "\n",
     "To fully specify the model, we need to choose the cluster number and the prior parameter. In the following experiments, we set $\\alpha=a=b=1$, and __we will mainly focus on tuning the prior of the cluster center $\\mu_k$__."
    ]
@@ -177,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the histograms of 3 RGB channels are indendent, while what we want is to cluster pixels based on a combination of 3 channels. Hence it only roughly gives us a sense of how many clusters there should be.\n",
+    "Note that the histograms of 3 RGB channels are independent, while what we want is to cluster pixels based on a combination of 3 channels. Hence it only roughly gives us a sense of how many clusters there should be.\n",
     "\n",
     "It seems like there are 9 clusters in the color histogram. So we make:"
    ]
@@ -754,7 +752,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we could see from above, MCMC's segmentation result does not vary much by switching shared prior to different prior. That is, MCMC is robust to the prior setting."
+    "MCMC's segmentation result does not vary much by switching shared prior to different prior. That is, MCMC is robust to the prior setting."
    ]
   },
   {
@@ -854,7 +852,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Checking the posterior, we could see that each $\\mu_k$ subjects to different distribution. It also reflects a different prior setting for $\\mu_k$ helps.\n",
+    "Checking the posterior, each $\\mu_k$ subjects to different distribution. It also reflects a different prior setting for $\\mu_k$ helps.\n",
     "\n",
     "\n",
     "However, the number of clusters identified by ADVI is less than that of MCMC. Moreover, the color of MCMC's result is closer to the truth which indicates a more accurate posterior distribution for $\\mu_k$."
@@ -979,7 +977,7 @@
     "\n",
     "and we also compute: \n",
     "$$\\text{log-PDI}(n) = \\log (\\text{PDI} (n))$$\n",
-    "since we find the distributino of PDI($n$) is quite spiky.\n",
+    "since we find the distribution of PDI($n$) is quite spiky.\n",
     "\n",
     "Reference: [PDI2016](https://arxiv.org/pdf/1605.07604.pdf)"
    ]
